--- a/css/style.css
+++ b/css/style.css
@@ -924,7 +924,7 @@ img.with-border{
 
 #main-slider.fixed-height{
 	position:relative;
-	height:625px;
+	height:125px;
 }
 
 /* ----------------------------------------------*/
@@ -945,7 +945,7 @@ img.with-border{
 #main-slider.flexslider .flex-viewport{
 	position:relative;
 	height:inherit;
-j
+}
 
 /* 06.2.1 Main Slider Flexslider Control Nav & Paging */
 /* ----------------------------------------------*/
