--- a/css/style.css
+++ b/css/style.css
@@ -1943,7 +1943,8 @@ a:hover .de-icon.effect3{
 /* 09.1 Image 									 */
 /* ----------------------------------------------*/
 .photo-item img {
-	width:100%;
+	/*width:100%;*/
+	width:200px;
 }
 
 /* ----------------------------------------------*/
