--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 /*==============================
 	- Template Name: FOREVER - Responsive HTML Wedding Template
 	- Author: DoubleEight
@@ -2670,7 +2671,8 @@ footer .image-divider.fixed-height{
 }
 
 #banner-date{
-	font-family: 'Oswald', 'Noto Sans KR', sans-serif;
+	font-family: 'Poor Story', cursive;
+	/*font-family: 'Oswald', 'Noto Sans KR', sans-serif;*/
 	letter-spacing:3px;
 	font-size:14px;
 }
