--- a/css/style.css
+++ b/css/style.css
@@ -2844,7 +2844,7 @@ footer .image-divider.fixed-height{
 	color:#f0394d
 }
 #where-when ul{
-  display: table;
+  width: 300px;
   margin-left: auto;
   margin-right: auto;
 }
