--- a/css/style.css
+++ b/css/style.css
@@ -3772,6 +3772,7 @@ footer .image-divider.fixed-height{
 	margin-top:10px;
 }
 #modal {
+display:none;
   position:relative;
   width:100%;
   height:100%;
