--- a/css/style.css
+++ b/css/style.css
@@ -1012,7 +1012,8 @@ img.with-border{
 .slide-title-outter-wrapper{
 	position:absolute;
 	width:100%;
-	height:inherit;
+	/*height:inherit;*/
+	height:70%;
 	left:0;
 	z-index:3;
 	overflow:hidden;
