--- a/css/style.css
+++ b/css/style.css
@@ -1039,6 +1039,7 @@ img.with-border{
 .slide-title h1, .slide-title h2, .slide-title h3,
 .slide-title h4, .slide-title h5, .slide-title h6{
 	color:#FFF;
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 
@@ -2676,6 +2677,7 @@ footer .image-divider.fixed-height{
 	/*font-family: 'Oswald', 'Noto Sans KR', sans-serif;*/
 	letter-spacing:3px;
 	font-size:14px;
+text-shadow: -1px 0 blue, 0 1px blue, 1px 0 blue, 0 -1px blue;
 }
 
 /* ----------------------------------------------*/
