--- a/css/style.css
+++ b/css/style.css
@@ -1957,10 +1957,10 @@ a:hover .de-icon.effect3{
 /* ----------------------------------------------*/
 .photo-item .layer {
 	position: absolute;
-	margin: 20px auto;
+	margin: auto;
 	top: 0;
 	right: 0;
-	bottom: 0;
+	bottom: 100px;
 	left: 0;
 	width:100%;
 	height:100%;
