--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3775,3 +3775,19 @@ footer .image-divider.fixed-height{
 	letter-spacing:3px;
 	margin-top:10px;
 }
+.bottom_right {
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 0px 15px 15px 15px;
+}
+
+.bottom_left {
+    overflow: hidden;
+    position: fixed;
+    text-align: right;
+    bottom: 0;
+    left: 0;
+    margin: 0px 15px 15px 15px;
+}
