--- a/docs/css/photo.css
+++ b/docs/css/photo.css
@@ -46,3 +46,9 @@ a {
 .btn_wrap a {
     font-weight: bold;
 }
+.ico_arrow{
+  width:80px;
+  height:80px;
+  position:relative;
+  text-indent:-9999px;
+}
